crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__help__help_harvest_summary.snap
---
source: crates/engram-cli/tests/cli/snapshot/help.rs
expression: "f.run_bare(& [\"harvest\", \"summary\", \"--help\"])"
---
$ engramdb harvest summary --help
exit: 0
--- stdout ---
Set or replace a session's curated summary, re-embedding only it

Usage: engramdb harvest summary [OPTIONS] <SESSION_ID> [TEXT]

Arguments:
  <SESSION_ID>
          Session id, or a unique prefix of one

  [TEXT]
          The summary text. Pass an empty string to clear it

Options:
      --editor
          Compose the summary in $EDITOR

      --from-file <PATH>
          Read the summary from a file (`-` for stdin)

      --format <FORMAT>
          Output format

          Possible values:
          - pretty: Human-friendly colored output with formatting
          - json:   JSON output for programmatic parsing
          - plain:  Plain text output without colors

      --json
          Output as JSON

  -q, --quiet
          Suppress non-essential output

  -v, --verbose
          Verbose output

      --no-color
          No colored output

      --dir <DIR>
          Working directory (default: current directory)

      --embedding-backend <EMBEDDING_BACKEND>
          Embedding backend: auto, onnx, or ollama

      --in-process
          Force in-process model loading — never contact the shared embedding daemon. Equivalent to setting ENGRAMDB_IN_PROCESS=1

      --spawn-daemon
          Spawn the shared embedding daemon if it is not already running, then route through it. By default the CLI only uses a daemon that is already running (connect-only)

      --no-maintenance
          Skip the automatic main-worktree maintenance pass (orphan-project cleanup + a quick store health check) for this invocation. Equivalent to setting ENGRAMDB_DISABLE_AUTO_MAINTENANCE=1

  -h, --help
          Print help (see a summary with '-h')
--- stderr ---
