crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__help__help_hook.snap
---
source: crates/engram-cli/tests/cli/snapshot/help.rs
expression: "f.run_bare(& [\"hook\", \"--help\"])"
---
$ engramdb hook --help
exit: 0
--- stdout ---
Claude Code plugin hook handler

Usage: engramdb hook [OPTIONS] [COMMAND]

Commands:
  pre-tool-use        Handle PreToolUse hook events (reads JSON from stdin, outputs additionalContext)
  session-start       Handle SessionStart hook events (outputs high-criticality memories)
  user-prompt-submit  Handle UserPromptSubmit hook events (prompt-relevant memories with situation inference)
  post-tool-use       Handle PostToolUse hook events (warn when an edit touches a memory's watch paths)
  session-end         Handle SessionEnd hook events (housekeeping; no context output)
  pre-compact         Handle PreCompact hook events (store-your-memories reminder before compaction)
  help                Print this message or the help of the given subcommand(s)

Options:
      --format <FORMAT>
          Output format

          Possible values:
          - pretty: Human-friendly colored output with formatting
          - json:   JSON output for programmatic parsing
          - plain:  Plain text output without colors

      --json
          Output as JSON

  -q, --quiet
          Suppress non-essential output

  -v, --verbose
          Verbose output

      --no-color
          No colored output

      --dir <DIR>
          Working directory (default: current directory)

      --embedding-backend <EMBEDDING_BACKEND>
          Embedding backend: auto, onnx, or ollama

      --in-process
          Force in-process model loading — never contact the shared embedding daemon. Equivalent to setting ENGRAMDB_IN_PROCESS=1

      --spawn-daemon
          Spawn the shared embedding daemon if it is not already running, then route through it. By default the CLI only uses a daemon that is already running (connect-only)

      --no-maintenance
          Skip the automatic main-worktree maintenance pass (orphan-project cleanup + a quick store health check) for this invocation. Equivalent to setting ENGRAMDB_DISABLE_AUTO_MAINTENANCE=1

  -h, --help
          Print help (see a summary with '-h')
--- stderr ---
